shallow copy input arr

--- a/main.ipynb
+++ b/main.ipynb
@@ -362,12 +362,12 @@
     "\n",
     "def run_sort_suite(arr, suite_name, runner):\n",
     "    print(\"*** Running {} suite ***\".format(suite_name))\n",
-    "    quick_sort_result = runner(quick_sort, arr, \"Quick Sort\")\n",
-    "    heap_sort_result = runner(heap_sort, arr, \"Heap Sort\")\n",
-    "    merge_sort_result = runner(merge_sort, arr, \"Merge Sort\")\n",
-    "    radix_sort_result = runner(radix_sort, arr, \"Radix Sort\")\n",
-    "    bucket_sort_result = runner(bucket_sort, arr, \"Bucket Sort\")\n",
-    "    tim_sort_result = runner(tim_sort, arr, \"Tim Sort\")\n",
+    "    quick_sort_result = runner(quick_sort, arr.copy(), \"Quick Sort\")\n",
+    "    heap_sort_result = runner(heap_sort, arr.copy(), \"Heap Sort\")\n",
+    "    merge_sort_result = runner(merge_sort, arr.copy(), \"Merge Sort\")\n",
+    "    radix_sort_result = runner(radix_sort, arr.copy(), \"Radix Sort\")\n",
+    "    bucket_sort_result = runner(bucket_sort, arr.copy(), \"Bucket Sort\")\n",
+    "    tim_sort_result = runner(tim_sort, arr.copy(), \"Tim Sort\")\n",
     "    print(\"\\n\")\n",
     "\n",
     "    return {\n",
